@@ -520,31 +520,7 @@ public class RoundService {
 			.orElseThrow(() -> new CustomException(ResponseCode.NOT_FOUND));
 
 		// 2) 단어 정답 여부 판정
-		String targetWord = round.getWord1();
-		String normalizedInput  = req.guessText().replaceAll("\\s+", "").toLowerCase();
-		String normalizedAnswer  = targetWord.replaceAll("\\s+", "").toLowerCase();
-		boolean isCorrect = normalizedInput.equals(normalizedAnswer);
-
-		if (!isCorrect) {
-			if (room.getGameMode() == GameMode.DEFAULT) {
-				Optional<CategoryWord> cwOpt = categoryWordRepository.findByWordIgnoreCase(targetWord);
-				if (cwOpt.isPresent()) {
-					List<Synonym> syns = synonymRepository.findByMainWord(cwOpt.get());
-					for (Synonym s : syns) {
-						String normSyn = s.getSynonym().replaceAll("\\s+", "").toLowerCase();
-						if (normalizedInput.equals(normSyn)) {
-							isCorrect = true;
-							break;
-						}
-					}
-				}
-			} else {
-				String categoryName = room.getCategory().name();
-				isCorrect = gptService.isSynonym(targetWord, req.guessText(), categoryName);
-			}
-		}
-
-		Winner winner = isCorrect ? Winner.liar : Winner.civil;
+		boolean isCorrect = checkAnswer(round, req);
 
 		// 3) ParticipantRound 목록
 		List<ParticipantRound> prList = participantRoundRepository.findByRound(round);
@@ -555,7 +531,7 @@ public class RoundService {
 		long liarId = liarPR.getParticipant().getId();
 		List<ParticipantRound> civPRs = prList.stream()
 			.filter(pr -> !pr.isLiar())
-			.collect(Collectors.toList());
+			.toList();
 
 		int skipCount = 0;
 		Map<Long,Integer> voteCounts = new HashMap<>();
@@ -578,18 +554,7 @@ public class RoundService {
 			.count();
 
 		// 6) skipFlag 판정
-		boolean skipFlag;
-		if (nonSkipCounts.isEmpty()) {
-			skipFlag = true;
-		} else if (skipCount >= maxCount) {
-			skipFlag = true;
-		} else if (minCount == maxCount) {
-			skipFlag = true;
-		} else if (topTieCount > 1) {
-			skipFlag = true;
-		} else {
-			skipFlag = false;
-		}
+		boolean skipFlag = checkSkipFlag(nonSkipCounts, skipCount, minCount, maxCount, topTieCount);
 
 		// 7) topVotedId (지목된 시민)
 		final Long topVotedId = skipFlag
@@ -603,56 +568,80 @@ public class RoundService {
 		boolean citizenFoundLiar = (topVotedId != null && topVotedId.equals(liarId));
 
 		// 9) 점수 부여
-		if (winner == Winner.civil) {
-			// ▶ 시민 승리
-			if (citizenFoundLiar) {
-				// 1) 시민이 라이어를 찾고 + 라이어 오답
-				civPRs.forEach(pr -> pr.addScore(100));
-			} else {
-				// 2) 시민이 못 찾고 + 라이어 오답
-				liarPR.addScore(100);
-				if (!skipFlag && topVotedId != null) {
-					// 지목된 시민에만 페널티
-					prList.stream()
-						.filter(pr -> pr.getParticipant().getId().equals(topVotedId))
-						.forEach(pr -> pr.addScore(-100));
-				}
-				// 나머지 시민
-				civPRs.forEach(pr -> pr.addScore(-100));
-			}
-		} else {
-			// ▶ 라이어 승리
-			if (citizenFoundLiar) {
-				// 1) 시민이 라이어 찾았으나 라이어 정답
-				liarPR.addScore(100);
-				civPRs.forEach(pr -> pr.addScore(-100));
-			} else {
-				// 시민이 못 찾았을 때
-				if (isCorrect) {
-					// 3) 라이어 정답
-					liarPR.addScore(200);
-				} else {
-					// 2) 라이어 오답
-					liarPR.addScore(100);
-				}
-				if (!skipFlag && topVotedId != null) {
-					prList.stream()
-						.filter(pr -> pr.getParticipant().getId().equals(topVotedId))
-						.forEach(pr -> pr.addScore(-100));
-				}
-				// 나머지 시민
-				civPRs.forEach(pr -> pr.addScore(-100));
-			}
-		}
+		Winner winner = (citizenFoundLiar && !isCorrect) ? Winner.civil : Winner.liar;
+		applyScores(winner, citizenFoundLiar, isCorrect, civPRs, liarPR, prList, topVotedId);
 
 		round.setWinner(winner);
-		prList.forEach(participantRoundRepository::save);
+		participantRoundRepository.saveAll(prList);
 
 		String nickname = SecurityUtils.getCurrentNickname();
 		String socketMessage = formatGuessMessage(nickname, req.guessText(), isCorrect);
 		chatSocketService.guessSubmitted(roomCode, socketMessage);
 
 		return new GuessResponseDto(isCorrect, winner.name());
+	}
+
+	private boolean checkAnswer(Round round, GuessRequestDto req) {
+		String targetWord = round.getWord1();
+		String normalizedInput  = req.guessText().replaceAll("\\s+", "").toLowerCase();
+		String normalizedAnswer  = targetWord.replaceAll("\\s+", "").toLowerCase();
+		boolean isCorrect = normalizedInput.equals(normalizedAnswer);
+
+		if (!isCorrect) {
+			Optional<CategoryWord> cwOpt = categoryWordRepository.findByWordIgnoreCase(targetWord);
+			if (cwOpt.isPresent()) {
+				List<Synonym> syns = synonymRepository.findByMainWord(cwOpt.get());
+				for (Synonym s : syns) {
+					String normSyn = s.getSynonym().replaceAll("\\s+", "").toLowerCase();
+					if (normalizedInput.equals(normSyn)) {
+						isCorrect = true;
+						break;
+					}
+				}
+			}
+		}
+
+		return isCorrect;
+	}
+
+	private boolean checkSkipFlag(List<Integer> nonSkipCounts, int skipCount, int minCount, int maxCount, long topTieCount) {
+		if (nonSkipCounts.isEmpty()) {
+			return true;
+		} else if (skipCount >= maxCount) {
+			return true;
+		} else if (minCount == maxCount) {
+			return true;
+		} else if (topTieCount > 1) {
+			return true;
+		} else {
+			return false;
+		}
+	}
+
+	private void applyScores(Winner winner, boolean citizenFoundLiar, boolean isCorrect,
+		List<ParticipantRound> civPRs, ParticipantRound liarPR, List<ParticipantRound> prList, Long topVotedId) {
+		if (winner == Winner.civil) {
+			// ▶ 시민 승리
+			civPRs.forEach(pr -> pr.addScore(100));
+		} else {
+			// ▶ 라이어 승리
+			if (citizenFoundLiar && isCorrect) {
+				liarPR.addScore(100);
+				civPRs.forEach(pr -> pr.addScore(-100));
+			} else if (!citizenFoundLiar && isCorrect) {
+				civPRs.forEach(pr -> pr.addScore(-100));
+				liarPR.addScore(200);
+				prList.stream()
+					.filter(pr -> pr.getParticipant().getId().equals(topVotedId))
+					.forEach(pr -> pr.addScore(-100));
+			} else {
+				civPRs.forEach(pr -> pr.addScore(-100));
+				liarPR.addScore(100);
+				prList.stream()
+					.filter(pr -> pr.getParticipant().getId().equals(topVotedId))
+					.forEach(pr -> pr.addScore(-100));
+			}
+		}
 	}
 
 	private String formatGuessMessage(String nickname, String guessText, boolean isCorrect) {
